Changed button color

--- a/frontend/src/styles/variables.sass
+++ b/frontend/src/styles/variables.sass
@@ -2,16 +2,11 @@
 $font: Arial, Helvetica, sans-serif
 
 //Login
-
 $logo: url('../assets/img/NewGestionale3000.svg.png')
 
 $loginBg: url('../assets/img/Bg1.jpg')
 
-$loginButtonColorRed: 3
-$loginButtonColorGreen: 36
-$loginButtonColorBlue: 156
-$loginButtonBorderColor: rgba($loginButtonColorRed, $loginButtonColorGreen, $loginButtonColorBlue, 1)
-$loginButtonBackgroundColor: rgba($loginButtonColorRed, $loginButtonColorGreen, $loginButtonColorBlue, 0.3)
+$loginButtonBackgroundColor: rgb(3, 36, 152)
 $loginButtonTextColor: white
 
 $borderRadius: 10px
