Working with routing

--- a/frontend/src/app/models/login.component.html
+++ b/frontend/src/app/models/login.component.html
@@ -29,7 +29,7 @@
                 </mat-form-field>
 
                 <div [@errorLoginText]="errorLogin" class="login-error-div">
-                    <p *ngIf="loginError" class="login-error-text text">{{getErrorMessage()}}</p>
+                    <p class="login-error-text text">{{getErrorMessage()}}</p>
                 </div>
 
                 <div class="login-button-container">
