Created small toolbar

--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other styles files */
+
+//Ciao Luca del futuro, so che starai dicendo 'ehy ma queste due righe non servono a un beato cazzo, togliamole!' ...
+//ma NO, NON FARLO ASSOLUTAMENTE, oppure manderai a puttane tutto il progetto. Prego e buona giornata :)
+body
+    margin: 0
+
