--- a/frontend/src/styles/variables.sass
+++ b/frontend/src/styles/variables.sass
@@ -1,6 +1,9 @@
 //Global
 $font: Arial, Helvetica, sans-serif
 
+.text
+    font-family: $font
+
 //Login
 $logo: url('../assets/img/NewGestionale3000.svg.png')
 
@@ -12,3 +15,7 @@ $loginButtonTextColor: white
 $borderRadius: 10px
 
 $lineHeight: 2.77vh
+
+//Toolbar
+$toolbarBgColor: rgb(50, 89, 221)
+$toolbarTextColor: white
