I need to commit

--- a/frontend/src/app/models/dashboard.component.html
+++ b/frontend/src/app/models/dashboard.component.html
@@ -1,1 +1,5 @@
-<app-toolbar></app-toolbar>
+<app-toolbar [_hasSideNav]="hasSideNav"></app-toolbar>
+
+<!--<div class="container">-->
+<!--    Main-->
+<!--</div>-->
