--- a/frontend/src/styles/login.component.sass
+++ b/frontend/src/styles/login.component.sass
@@ -1,4 +1,5 @@
 @import "variables"
+@import "variables"
 
 .container
     width: 100%
@@ -33,11 +34,10 @@ $pad: 2.6vw
     justify-content: space-between
     padding: $pad 4.6vw $pad $pad
 
-$dim: 21vw
 .login-pic
-    width: $dim
-    height: $dim
-    background-size: $dim $dim
+    width: $bigLogoSize
+    height: $bigLogoSize
+    background-size: $bigLogoSize $bigLogoSize
     background-image: $logo
     background-position: center
 
