--- a/frontend/src/styles/toolbar.component.sass
+++ b/frontend/src/styles/toolbar.component.sass
@@ -3,7 +3,7 @@
 .toolbar
     background-color: $toolbarBgColor
     color: $toolbarTextColor
-    height: 6.4vh
+    height: $toolbarHeight
     width: 100%
 
 .benvenuto-text
@@ -11,4 +11,21 @@
     font-size: 20pt
 
 .benvenuto-div
-    margin: 0 auto
+    margin: 0 0 0 auto
+    padding: 0.57vh 0 0 0
+
+.logo-pic
+    width: $smallLogoSize
+    height: $smallLogoSize
+    background-size: $smallLogoSize
+    background-image: $logo
+
+.right-toolbar
+    width: 100%
+    display: flex
+
+.left-align
+    margin: 0 auto 0 1px
+
+.right-align
+    margin: 0 0 0 1vw
