--- a/frontend/src/styles/variables.sass
+++ b/frontend/src/styles/variables.sass
@@ -1,12 +1,17 @@
 //Global
 $font: Arial, Helvetica, sans-serif
 
+$logo: url('../assets/img/NewGestionale3000.svg.png')
+
+$bigLogoSize: 21vw
+$smallLogoSize: 3vw
+
+$sideBarWidth: $smallLogoSize + 1.2vw
+
 .text
     font-family: $font
 
 //Login
-$logo: url('../assets/img/NewGestionale3000.svg.png')
-
 $loginBg: url('../assets/img/Bg1.jpg')
 
 $loginButtonBackgroundColor: rgb(3, 36, 152)
@@ -19,3 +24,5 @@ $lineHeight: 2.77vh
 //Toolbar
 $toolbarBgColor: rgb(50, 89, 221)
 $toolbarTextColor: white
+
+$toolbarHeight: 6.4vh
