--- a/frontend/src/app/models/app.component.html
+++ b/frontend/src/app/models/app.component.html
@@ -1,3 +1,5 @@
-<div class="content"></div>
+<div class="content">
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+
+</div>
