--- a/frontend/src/styles/dashboard.component.sass
+++ b/frontend/src/styles/dashboard.component.sass
@@ -1,8 +1,10 @@
 @import "variables"
 
 .container
-    width: 100%
-    margin: 0 auto
+    width: 100vw - $sideBarWidth
+    height: 100vh - $toolbarHeight
+    margin: 0
+    padding: 0
     min-height: 100vh
     display: -webkit-box
     display: -webkit-flex
@@ -12,5 +14,4 @@
     flex-wrap: wrap
     justify-content: center
     align-items: center
-    background-size: 100%
-    background-image: $loginBg
+    background-color: green
