Set up sidenav and toolbar

--- a/frontend/src/app/models/dashboard.component.html
+++ b/frontend/src/app/models/dashboard.component.html
@@ -1,5 +1,1 @@
-<app-toolbar [_hasSideNav]="hasSideNav"></app-toolbar>
-
-<!--<div class="container">-->
-<!--    Main-->
-<!--</div>-->
+<p>DASHBOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARD</p>
