--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -1,7 +1,12 @@
 /* You can add global styles to this file, and also import other styles files */
 
+@import "styles/variables"
+
 //Ciao Luca del futuro, so che starai dicendo 'ehy ma queste due righe non servono a un beato cazzo, togliamole!' ...
 //ma NO, NON FARLO ASSOLUTAMENTE, oppure manderai a puttane tutto il progetto. Prego e buona giornata :)
 body
     margin: 0
 
+.mat-tooltip
+    font: $font
+    font-size: 1.3vh
