--- a/frontend/src/styles/dashboard.component.sass
+++ b/frontend/src/styles/dashboard.component.sass
@@ -1,7 +1,7 @@
 @import "variables"
 
 .container
-    width: 100vw - $sideBarWidth
+    width: 100vw
     height: 100vh - $toolbarHeight
     margin: 0
     padding: 0
