--- a/frontend/src/styles/toolbar.component.sass
+++ b/frontend/src/styles/toolbar.component.sass
@@ -1,28 +1,20 @@
 @import "variables"
 
-.toolbar
-    background-color: $toolbarBgColor
-    color: $toolbarTextColor
-    height: $toolbarHeight
-    width: 100%
-
-.benvenuto-text
+.nome-text
     margin: 0
     font-size: 20pt
 
-.benvenuto-div
+.nome-div
     margin: 0 0 0 auto
     padding: 0.57vh 0 0 0
-
-.logo-pic
-    width: $smallLogoSize
-    height: $smallLogoSize
-    background-size: $smallLogoSize
-    background-image: $logo
 
 .right-toolbar
     width: 100%
     display: flex
+
+//document.getElementById('logo').offsetWidth
+.mat-toolbar-row
+    height: $toolbarHeight
 
 .left-align
     margin: 0 auto 0 1px
