--- a/frontend/src/styles/variables.sass
+++ b/frontend/src/styles/variables.sass
@@ -4,9 +4,7 @@ $font: Arial, Helvetica, sans-serif
 $logo: url('../assets/img/NewGestionale3000.svg.png')
 
 $bigLogoSize: 21vw
-$smallLogoSize: 3vw
-
-$sideBarWidth: $smallLogoSize + 1.2vw
+$smallLogoSize: 5.5vh
 
 .text
     font-family: $font
@@ -26,3 +24,15 @@ $toolbarBgColor: rgb(50, 89, 221)
 $toolbarTextColor: white
 
 $toolbarHeight: 6.4vh
+
+.toolbar
+    background-color: $toolbarBgColor
+    color: $toolbarTextColor
+    height: $toolbarHeight
+    width: 100%
+
+.toolbar-row
+    height: $toolbarHeight
+
+//Sidenav
+$icoRightMargin: .63vw  //12px (1920x1080)
