--- a/frontend/src/styles/userinterface.component.sass
+++ b/frontend/src/styles/userinterface.component.sass
@@ -39,3 +39,20 @@
 .placeholder
     width: $icoRightMargin
 
+.nome-text
+    margin: 0
+    font-size: 2.47vh
+
+.nome-div
+    position: fixed
+    bottom: 0
+    padding: 0 0 .92vh 1.25vw
+    place-content: center flex-end
+    text-align: center
+    box-sizing: border-box
+
+.sidenav
+    flex-direction: column
+    display: flex
+    box-sizing: border-box
+
