--- a/frontend/src/styles/toolbar.component.sass
+++ b/frontend/src/styles/toolbar.component.sass
@@ -16,8 +16,14 @@
 .mat-toolbar-row
     height: $toolbarHeight
 
-.left-align
+.left-toolbar
     margin: 0 auto 0 1px
 
-.right-align
-    margin: 0 0 0 auto
+.left-component
+    margin: 0 auto 0 1px
+
+.right-toolbar
+    margin: 0 1px 0 auto
+
+.right-component
+    margin: 0 1px 0 auto
