--- a/frontend/src/app/models/gestione-utenti.component.html
+++ b/frontend/src/app/models/gestione-utenti.component.html
@@ -1,1 +1,35 @@
-<p>gestione-utenti works!</p>
+<div class="ui-child-container">
+
+    <div class="wrapper">
+
+        <mat-form-field class="filter-wrapper">
+            <mat-label class="text">Fitro</mat-label>
+            <input matInput (keyup)="applyFilter($event)" class="text" placeholder="Inserire il filtro">
+        </mat-form-field>
+
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="username" matSortDirection="asc">
+
+            <ng-container matColumnDef="username">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Username</th>
+                <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="nome">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome completo</th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="permessi">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Permessi</th>
+                <td mat-cell *matCellDef="let element"> {{element.permessi}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons></mat-paginator>
+
+    </div>
+
+</div>
