--- a/frontend/src/styles/dashboard.component.sass
+++ b/frontend/src/styles/dashboard.component.sass
@@ -1,14 +1,5 @@
 @import "variables"
 
-.container
-    height: 100vh - $toolbarHeight
-    margin: 0
-    padding: 0
-    display: flex
-    flex-wrap: wrap
-    justify-content: center
-    align-items: center
-
 .dashboard-wrapper
     width: 80vw
     height: 85vh
@@ -20,7 +11,7 @@
     display: flex
 
 .cat-title
-    font-size: 20pt
+    font-size: 2.41vh
     margin: 0 0 2vh 0
 
 .card
@@ -32,10 +23,11 @@
 
 .card-title
     padding: 1.6vh 0 0 1vw
-    font-size: 15pt
+    font-size: 1.85vh
 
 .card-ico
     position: absolute
     right: 1vw
     bottom: 2vh
-    font-size: 50pt
+    font-size: 4.90vh
+
