Set up permissions

--- a/frontend/src/app/models/dashboard.component.html
+++ b/frontend/src/app/models/dashboard.component.html
@@ -4,7 +4,7 @@
 
         <div *ngFor="let cat of categories" class="cards-wrapper">
 
-            <p class="text cat-title"><strong>{{getCatName(cat)}}</strong></p>
+            <p *ngIf="showTitle(cat)" class="text cat-title"><strong>{{getCatName(cat)}}</strong></p>
 
             <div class="display">
 
