Add 404 and 403 pages

--- a/frontend/src/styles/login.component.sass
+++ b/frontend/src/styles/login.component.sass
@@ -18,6 +18,8 @@
     align-items: center
     background-size: 100%
     background-image: $loginBg
+    background-repeat: no-repeat
+    background-position: center
 
 $pad: 2.6vw
 .login-wrap
