--- a/frontend/src/styles/toolbar.component.sass
+++ b/frontend/src/styles/toolbar.component.sass
@@ -12,7 +12,6 @@
     width: 100%
     display: flex
 
-//document.getElementById('logo').offsetWidth
 .mat-toolbar-row
     height: $toolbarHeight
 
@@ -27,3 +26,6 @@
 
 .right-component
     margin: 0 1px 0 auto
+
+.mat-toolbar-multiple-rows
+    min-height: 3px
