--- a/frontend/src/styles/toolbar.component.sass
+++ b/frontend/src/styles/toolbar.component.sass
@@ -21,6 +21,9 @@
 .left-component
     margin: 0 auto 0 1px
 
+.center-toolbar
+    margin: 0 auto 0 auto
+
 .right-toolbar
     margin: 0 1px 0 auto
 
