--- a/frontend/src/app/models/gestione-utenti.component.html
+++ b/frontend/src/app/models/gestione-utenti.component.html
@@ -2,10 +2,14 @@
 
     <div class="wrapper">
 
-        <mat-form-field class="filter-wrapper">
-            <mat-label class="text">Fitro</mat-label>
-            <input matInput (keyup)="applyFilter($event)" class="text" placeholder="Inserire il filtro">
-        </mat-form-field>
+        <div class="head">
+
+            <mat-form-field class="filter-wrapper">
+                <mat-label class="text">Fitro</mat-label>
+                <input matInput (keyup)="applyFilter($event)" class="text" placeholder="Inserire il filtro">
+            </mat-form-field>
+
+        </div>
 
         <table mat-table [dataSource]="dataSource" matSort matSortActive="username" matSortDirection="asc">
 
@@ -19,13 +23,13 @@
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="permessi">
+            <ng-container matColumnDef="permissions">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Permessi</th>
-                <td mat-cell *matCellDef="let element"> {{element.permessi}} </td>
+                <td mat-cell *matCellDef="let element"> {{getPermissions(element.permissions)}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="editUser(row)"></tr>
         </table>
 
         <mat-paginator [pageSizeOptions]="[9]" showFirstLastButtons></mat-paginator>
