--- a/frontend/src/app/models/magazzino.component.html
+++ b/frontend/src/app/models/magazzino.component.html
@@ -1,1 +1,56 @@
-<p>magazzino works!</p>
+<div class="ui-child-container">
+
+    <div class="wrapper">
+
+        <div class="head">
+
+            <mat-form-field class="filter-wrapper">
+                <mat-label class="text">Fitro</mat-label>
+                <input matInput (keyup)="applyFilter($event)" class="text" placeholder="Inserire il filtro">
+            </mat-form-field>
+
+        </div>
+
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="stock" matSortDirection="asc">
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome</th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Descrizione</th>
+                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="price">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Prezzo</th>
+                <td mat-cell *matCellDef="let element"> {{element.price | number: '1.2-2'}} €</td>
+            </ng-container>
+
+            <ng-container matColumnDef="stock">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Giacenza</th>
+                <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="group">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Gruppo</th>
+                <td mat-cell *matCellDef="let element"> {{element.group}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="popup">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Popup</th>
+                <td mat-cell *matCellDef="let element"> {{element.popup}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+<!--            (click)="editUser(row)"-->
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'make-red': row.stock <= 10}"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[9]" showFirstLastButtons></mat-paginator>
+
+    </div>
+
+</div>
+
