--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -16,3 +16,6 @@ body
 
 .mat-body p, .mat-body-1 p, .mat-typography p
     margin: 0
+
+.mat-grid-tile .mat-figure
+    justify-content: start !important
