--- a/frontend/src/styles/gestione-utenti.component.sass
+++ b/frontend/src/styles/gestione-utenti.component.sass
@@ -10,3 +10,16 @@ table
 
 th.mat-sort-header-sorted
     color: black
+
+.mat-header-cell
+    font: $font
+    font-size: 2.2vh
+    color: black
+    background-color: rgba(50, 89, 221, .4)
+
+.head
+    width: 100%
+    display: flex
+
+.filter-wrapper
+    margin: 0 1px 0 auto
