Finish up edit user interface

--- a/frontend/src/app/models/gestione-utenti.component.html
+++ b/frontend/src/app/models/gestione-utenti.component.html
@@ -32,7 +32,7 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="editUser(row)"></tr>
         </table>
 
-        <mat-paginator [pageSizeOptions]="[9]" showFirstLastButtons></mat-paginator>
+        <mat-paginator [pageSizeOptions]="getObjectsPerPage()" showFirstLastButtons></mat-paginator>
 
     </div>
 
