--- a/frontend/src/styles/gestione-utenti.component.sass
+++ b/frontend/src/styles/gestione-utenti.component.sass
@@ -23,3 +23,12 @@ th.mat-sort-header-sorted
 
 .filter-wrapper
     margin: 0 1px 0 auto
+
+.mat-column-username
+    width: 30%
+
+.mat-column-name
+    width: 30%
+
+.mat-column-permissions
+    width: 40%
