--- a/frontend/src/app/dialogs/editUserDialog.html
+++ b/frontend/src/app/dialogs/editUserDialog.html
@@ -25,7 +25,7 @@
 
     </mat-grid-list>
 
-    <mat-grid-list cols="10" rowHeight="4vh">
+    <mat-grid-list cols="10" rowHeight="5vh">
 
         <mat-grid-tile
             [colspan]="10"
@@ -101,6 +101,6 @@
 <div mat-dialog-actions>
 
     <button mat-button (click)="onNoClick()" class="annulla-button">Annulla</button>
-    <button mat-button class="salva-button">Salva</button>
+    <button mat-button (click)="updateUser()" class="salva-button">Salva</button>
 
 </div>
